<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical"
        android:padding="30dp"
        >

        <TextView
            android:id="@+id/text_title"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="Table Reservation System"
            android:textColor="@color/black"
            android:textSize="36sp"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            />

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_textedit"
            android:layout_marginBottom="10dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:inputType="textPassword"
            android:background="@drawable/rounded_textedit"
            android:layout_marginTop="20dp"
            android:drawableEnd="@drawable/ic_baseline_remove_red_eye_24"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/forgot_password"
            android:textColor="@color/gold"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"

            />
        <Button
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:backgroundTint="@color/black"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_a_member"
                android:layout_gravity="center"
                android:layout_marginStart="50pt"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/gold"
                android:layout_marginStart="5dp"
                />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>